success message responsive update

--- a/success.html
+++ b/success.html
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <title>Frontend Mentor | Newsletter sign-up form with success message</title>
     <style>
         .container{
     display: flex;
@@ -12,6 +16,11 @@
     width: 90%;
     gap: 30px;
     max-width: 446px;
+}
+@media screen and (max-width:600px) {
+    .container{
+        padding: 10px;
+    }
 }
     </style>
 </head>
